[tool.poetry]
name = "heroku_status_badge"
version = "0.1.0"
description = ""
authors = ["Douglas Gusson <douglasgusson@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^20.8b1", allow-prereleases = true}
ipython = "^7.18.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
